# AI-Identity

./: .dockerignore  .editorconfig  .env.example  .gcloudignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  AI-Agent-Lifecycle-Training.pptx  AI-IDENTITY-SUMMARY.md  AI-Identity-Status-Report-2026-04-06.docx  AI_Identity_Budget_Tracker.xlsx  CHANGELOG.md  CONTRIBUTING.md  Deployment_Runbook_K8s.docx  Dockerfile  Dockerfile.api  Dockerfile.gateway  Dockerfile.mandate  LICENSE  Makefile  PHASE1_TEST_RESULTS.md  QA_CHECKLIST.md  QUICKSTART.md  README.md  ROADMAP.md  TESTING_PHASE1.md  alembic.ini  binauth-policy.yaml  cloudbuild.yaml  competitive-brief-april-2026.md  docker-compose.yml  messaging-governance-vs-enforcement.md  pyproject.toml  render.yaml  requirements-dev.txt
.bob/rules-advanced/: AGENTS.md
.bob/rules-ask/: AGENTS.md
.bob/rules-code/: AGENTS.md
.claude/: brand-voice-guidelines.md  launch.json  settings.json
agent/: .dockerignore  .gitignore  Dockerfile  Launch Ada.command  README.md  auth.py  cloudbuild.yaml  requirements.txt  serve.py
alembic/: env.py
api/: requirements.txt
assets/: email-signature.html  forensics-pipeline.html
cli/: LICENSE  README.md  REFERENCE.md  ai_identity_verify.py  aid.py  test_aid.py  test_verify.py
common/: __init__.py  capabilities.py  setup.py
dashboard/: .env.example  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
docs/: ADR-001-architecture-recommendations.md  ADR-002-compliance-exports.md  ADR-003-evidence-anchor-key-directory.md  ARCHITECTURE.md  ada-deployment.md  api-versioning-strategy.md  audit-chain-per-org-migration.md  compliance-readiness.md  gcloud-migration-plan.md  gke-vs-cloudrun-evaluation.md  local-development.md  ocsf-1661-sync-plan.md  ocsf-extension-request-draft.md  qa-checklist.md  support-runbook.md  support-ticket-architecture.md  support-ticket-deployment-guide.md  support-ticket-implementation-plan.md  support-ticket-system-spec.md
gateway/: requirements.txt
grants/: nsf-sbir-project-pitch-draft.md
k8s/: api-deployment.yaml  api-service.yaml  backend-config.yaml  configmap.yaml  cronjob-cleanup.yaml  cronjob-compliance-export-cleanup.yaml  cronjob-email.yaml  cronjob-evidence-anchor.yaml  forensic-signer-serviceaccount.yaml  frontend-config.yaml  gateway-deployment.yaml  gateway-service.yaml  hpa-api.yaml  hpa-gateway.yaml  ingress.yaml  managed-certificate.yaml  mandate-deployment.yaml  mandate-service.yaml  migration-job.yaml  namespace.yaml  network-policies.yaml  pdb.yaml  pod-monitoring.yaml  prometheus-rules.yaml  secretproviderclass.yaml  serviceaccount.yaml
landing-page/: .env.local.example  .gitignore  BRAND_ASSETS_README.md  index.html  next.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts
mandate/: requirements.txt
outreach/: design-partner-messages.md  linkedin-reply-megan-cardinal-health.docx  linkedin-reply-megan-cardinal-health.md
sales/: AI-Identity-Sales-Playbook-Investor.pptx  AI-Identity-Sales-Playbook.pptx  ICP.md  brand-brief.md  design-partner-program.md  launch-content-plan.md  onboarding-email-sequence.md  outreach-templates.md  prospects.csv  prospects.xlsx
scripts/: audit-default-vpc.sh  backfill_key_fingerprints.py  backfill_per_org_chain.py  check-pillar-consistency.sh  check_audit_trigger.py  demo_mandate_overspend.py  docker-setup.sh  evidence_anchor_mirror.py  export_pipeline_snapshot.py  generate_internal_key.py  keepalive.sh  keepalive_cron.py  mandate-smoke.sh  mandate_smoke.py  probe_signup_daily_summary.py  purge_test_users.py  qa-smoke-test.sh  render_whitepaper_pdf.py  rotate_master_key.py  seed.py  seed_compliance.py  setup-binauth.sh  setup-cloud-armor.sh  setup-forensic-signer.sh  setup-mongodb-atlas.sh  setup-mongodb-vpc-peering.sh  setup-secret-manager.sh  setup-uptimerobot.sh  sweep_stale_decisions.py  sync_calendar_from_dashboard.py  verify_change_log.py  verify_per_org_chain.py
sdk/langchain/: LICENSE  README.md  pyproject.toml
sdk/langchain/examples/: basic_agent.py  crewai_integration.py  langchain_tools.py
sdk/langchain/src/langchain_ai_identity/: __init__.py  agent.py  callback.py  chat_models.py  tools.py
sdk/python/: README.md  pyproject.toml
sdk/python/src/ai_identity/: __init__.py  _http.py  client.py  exceptions.py
sdk/python/src/ai_identity/models/: __init__.py  agents.py  audit.py  credentials.py  keys.py  policies.py
sdk/python/src/ai_identity/resources/: __init__.py  agents.py  audit.py  credentials.py  keys.py  policies.py
(+835 files in other folders)
