[project]
name = "ai-identity"
version = "0.1.0"
description = "Identity, permissions, and guardrails for AI agents"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["alembic/"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (FastAPI Depends pattern)
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["api/tests", "gateway/tests", "common/tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
