[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-identity"
version = "0.1.0"
description = "Python SDK for the AI Identity API — identity, governance, and forensics for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "AI Identity", email = "jeff@ai-identity.co" }]
keywords = ["ai", "identity", "agents", "governance", "compliance", "forensics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://ai-identity.co"
Documentation = "https://api.ai-identity.co/docs"
Repository = "https://github.com/Levaj2000/AI-Identity"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_identity"]
